Linter: fix Locale constructor deprecation since Java 19